--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: sravanroy247@gmail.com
+       #url: sravanroy247@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -119,11 +119,11 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Facebook"
-      icon: "fab fa-fw fa-linkedin-square"
-       url: "https://www.linkedin.com/in/sravan-roy-959090100/"
+      icon: "fab fa-fw fa-facebook-square"
+       #url: "https://www.linkedin.com/in/sravan-roy-959090100/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "https://github.com/sravanroy"
+       #url: "https://github.com/sravanroy"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
