--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "sravan-roy-959090100" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : #"sravan-roy-959090100" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          :  "https://www.youtube.com/channel/UCifAmHD-w2oEuLRsiSDakOg?view_as=subscriber"
+  youtube          :  #"https://www.youtube.com/channel/UCifAmHD-w2oEuLRsiSDakOg?view_as=subscriber"
 
 
 # Reading Files
