--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
 main:
   - title: "About"
-    url:/about/
+    url: /about/
   - title: "Machine Learning"
-    url:/machine-learning/
+    url: /machine-learning/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
