--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   name             : "Sravan Roy"
   avatar           : "/images/bio.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio"
-  location         : "Bangalore"
+  location         : "Atlanta"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
